--- a/index.html
+++ b/index.html
@@ -14,6 +14,61 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <nav>
+      <div>
+        <div><a href="#about">About Me</a></div>
+        <div><a href="#skills">Skills</a></div>
+        <div><a href="#work">Work History</a></div>
+        <div><a href="#contact">Contact Me</a></div>
+      </div>
+    </nav>
+    <div>
+      <div>
+        <div>
+          <img src="images/avi.jpg" alt="Photo of Alexander Karren">
+        </div>
+        <div>
+          <div>
+            <h1>Alexander Karren</h1>
+            <p class="title">Aspiring Web Developer</p>
+            <div>
+              <p><span>State</span>&nbsp;Utah</p>
+              <p><span>Age</span>&nbsp;22</p>
+              <p><span>Email</span>&nbsp;<a href="alex@karren.com">alex@karren.com</a></p>
+              <p><span>Website</span>&nbsp;[put link here later]</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+  </header>
+  <section id="about">
+    <h1>About Me</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore iure deserunt doloribus voluptas incidunt officia. Itaque, quos, nulla inventore reiciendis possimus et recusandae aliquid pariatur commodi sint numquam laudantium doloribus!</p>
+    <h2>Why should you hire me?</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur nesciunt ullam qui, cupiditate inventore debitis, quisquam provident fuga facere veniam maxime quae animi iure neque, doloremque natus nostrum vitae dolores.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod pariatur consectetur, ullam expedita voluptates molestias iure aliquid rerum labore minus, at maiores atque eligendi impedit nulla optio, corporis facilis ratione!</p>
+  </section>
+  <section id="skills">
+    <h1>Skills</h1>
+  </section>
+  <section id="work">
+    <h1>Work History</h1>
+    <h2>Work #1</h2>
+    <p>Description</p>
+    <h2>Work #2</h2>
+    <p>Description</p>
+    <h2>Work #3</h2>
+    <p>Description</p>
+  </section>
+  <footer id="contact">
+    <h1>Contact Me</h1>
+    <div>
+      <div>Twitter</div>
+      <div>Github</div>
+      <div>Email</div>
+    </div>
+  </footer>
 </body>
 </html>
