added two mixins

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>My Resume</title>
 
+  <script src="https://kit.fontawesome.com/714642c034.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -52,6 +53,12 @@
   </section>
   <section id="skills">
     <h1>Skills</h1>
+    <h2>Skill #1</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, ullam iste. Iste consequatur pariatur soluta quae obcaecati veritatis enim minima rem voluptates, temporibus quaerat libero aut expedita sint magni ea.</p>
+    <h2>Skill #2</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid error delectus possimus iusto, labore voluptatibus, cupiditate temporibus numquam at reprehenderit obcaecati nesciunt architecto dolor facere quae. Exercitationem veritatis sit iure!</p>
+    <h2>Skill #3</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit ex error nobis eos rerum accusamus officiis ea sed labore? Accusantium minus doloremque impedit at dignissimos sapiente placeat cupiditate excepturi tempore.</p>
   </section>
   <section id="work">
     <h1>Work History</h1>
@@ -65,9 +72,9 @@
   <footer id="contact">
     <h1>Contact Me</h1>
     <div>
-      <div>Twitter</div>
-      <div>Github</div>
-      <div>Email</div>
+      <div><a href=""><i class="fab fa-twitter"></i></a></div>
+      <div><a href=""><i class="fab fa-github"></i></a></div>
+      <div><a href=""><i class="fas fa-envelope"></i></a></div>
     </div>
   </footer>
 </body>
