--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  
   <title>My Resume</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/714642c034.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/index.css">
 
